assets/custom.css
body {
	font-family: DIN !important;
    margin: 0;
    padding: 0;
    background-color: #fff;
}

* {
    font-family: DIN;
}

html {
	overflow-x: hidden;
    background-color: #fff;
}

a {
    color: inherit;
    text-decoration: none;
}


.btn {
    background: #fff;
    color: #000;
    border: 2px solid #000;
    padding: 15px 30px;
    text-decoration: none;
}

.btn:hover {
    color: #fff;
    background: #000;
/*    -webkit-transition-duration: .1s;
    transition-duration: .1s;*/
}

.container {
    width: 90%;
    height: 100%;
    margin: 0 auto;
    max-width: 1600px;
}

@media all and (max-width < 768px) {
    .container {
        width: 96%
    }
}

.portfolio .pure-g {
    margin: 10px 0;
   /* justify-content: center;*/
}

.spacer {
    height: 10px;
    width: 10px;
}

@font-face {
	font-family: DIN;
	src: url("fonts/DIN.otf") format("opentype");
}

section {
    position: relative;
}

/************************************* NAVIGATION ************************************/

.nav {
    padding: 0 15px;
    position: fixed;
    z-index: 1000;
    top: 0;
    height: 60px;
    width: 100%;
    /*background-color: rgba(255,255,255, .2);*/
    background-color: #000;
    color: white;
}

.nav .logo {
    height: 40px;
    padding: 10px 0;
    text-align: left;
}

.nav .logo img {
    height: 100%;
}

.nav .nav-menu {
    text-align: right;
    height: 33px;
}

.nav .nav-menu .links {
    display: none;
    list-style: none;
    height: 100%;
    padding-top: 7px;
}

.nav .nav-menu .links a:hover {
    color: #999;
}

.nav .nav-menu .hamburger {
    width: 30px;
    padding-top: 10px;
    display: inline-block;
}

.nav .nav-menu .hamburger img {
    width: 100%;
}

.nav .nav-menu .links li {
    display: inline-block;
    padding: 0 20px;
}
    
/* MD size, greater than 1024 */
@media all and (min-width: 1024px) {
    .nav .nav-menu .links {
        display: inline-block;
    }

    .nav .nav-menu .hamburger {
        display: none;
    }
}

/************************************* HERO HEADER **********************************/

.video-container {
    bottom: 0;
    left: 0;
    width: 100%;
    height: 100%;
    overflow: hidden;
    position: relative;
}

.background-video {
    width: 100%;
    height: 100%;
}

.video-container .header-text {
    position: absolute;
    width: 95%;
    bottom: 80px;
    padding-left: 5%;
}


.image-container {
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-position: 50% 50%;
    background-size: cover;
    background-repeat: no-repeat;
}

video {
    display: block;
    width: 100%;
    height: auto;
}

/******************************************** REEL *****************************************/
.reel {
    
}

/****************************************** PORTFOLIO *********************************************/

.portfolio .port-block {
    /*min-height: 290px;*/
    /*max-height: 300px;*/
    height: 350px;
}

.portfolio .port-block img {
    width: 100%;
    height: 100%;
}

.portfolio .port-block .port-content {
    width: 100%;
    height: 100%;
    background-position: 50% 50%;
    background-size: cover;
    background-repeat: no-repeat;
    overflow: hidden;
    position: relative;
}

.portfolio .port-block #port1 {
    background-image: url("img/portfolio/reviver.png");
}

.portfolio .port-block #port2 {
    background: rgba(0,0,0,0);
}

.portfolio .port-block #port3{
    background: rgba(0,0,0,0);   
}

.portfolio .port-block #port4{
    background: rgba(0,0,0,0);
}

.portfolio .port-block #port5 {
    background: rgba(0,0,0,0);
}

.portfolio .port-block #port6 {
    background-image: url("http://placehold.it/1000x400");
}

.portfolio .port-block .port-video-container {
    width: 100%;
    /*height: 100%;*/
    display: block;
    position: absolute;
    top: 0;
    left: 0;
}

.portfolio .port-block .port-content video {
    width: 100%;
    height: 100%;
}

.portfolio .port-block .port-content:hover .filter {
    display: inline-block;
    cursor: pointer;
}

.portfolio .port-block .port-content .filter{
    display: none;
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    background-color: rgba(255,255,255,.6);
    z-index: 10;
    /*padding-top: 5%;*/
}

.portfolio .port-block .port-content .filter .port-text {
    width: 80%;
    position: absolute;
    left: 20%;
    top: 20%;
    height: 80%;
    /*background: red;*/
}

.pure-u-lg-2-100 {
    height: 10px;
    width: 10px;
}

@media screen and (min-width: 64em) {
    .pure-u-lg-99-100 {
        width: 49.75%;
    }
    
    .pure-u-lg-2-100 {
        width: .5%;
    }
}

/************************************* BRAND LOGOS ***********************************/
.brands {
    color: white;
    background-color: #aaa;
}

.brands .brand-logo {
    opacity: .5;
    background-position: 50% 50%;
    background-size: 80%;
    background-repeat: no-repeat;
    /*padding: 0 10px;*/
    /*height: 60px;*/
}

.brands #logo-reviver {
    background-image: url("img/reviver.png");
}

.brands #logo-breathometer {
    background-image: url("img/breathometer.png");
}

.brands #logo-skully {
    background-image: url("img/skully.png");
}

.brands .brand-logo:hover {
    cursor: pointer;
}

.brands .active-brand {
    opacity: 1;
}

.brands .brand-logo img {
    width: 100%;
}

.brands .brand-message-holder {
    height: 200px;
    padding: 50px 0;
    text-align: center;
}

.brands .brand-message-holder .brand-message {
    display: none;
}

.brands .brand-message-holder #message-1 {
    display: inline-block;
}

/********************************** STATEMENT *****************************************/
.statement {
    height: 500px;
    padding: 90px 0px;
    color: #fff;
    background-image: url("img/HUD1.jpg");
    background-position: right center;
    background-size: cover;
    background-repeat: no-repeat;
}

/********************************* CONTACT CTA ****************************************/
.contact-cta {
    height: 100px;
    text-align: center;
    padding-top: 50px;
}

/************************************ FOOTER ******************************************/
.footer {
    background-color: #000;
    height: 100px;
    padding: 50px 0px;
    color: white;
}

.footer .footer-content {
    height: 100px;
}

.footer .footer-right {
    text-align: right;
}

.footer .social {
    padding: 0 1%;
}

.footer .social img {
    width: 98%;
}

/******************************************************************************************/
/******************************************************************************************/
/********************************** ABOUT PAGE ********************************************/
/******************************************************************************************/
/******************************************************************************************/

/******************************* HEADER ***************************************************/
.about-header {
    height: 100vh;
}

.about-header .header-text {
    position: absolute;
    bottom: 80px;
    width: 60%;
}

.header-text h1 {
    font-size: 5em;
}

/*.about-header .image-container {
    background-color: black;
    color: white;
}*/

/************************************* TEAM PHOTO ****************************************/

.team-photo .team-image{
    width: 100%;
}

.team-photo .team-image img {
    width: 100%;
}

/*************************************** SERVICES ****************************************/
.services {
    padding: 60px 0;
}

.services .services-title {
    
}

.services .service-lists .column {
    text-align: center;
}

.services .service-lists .column .list{
    display: inline-block;
    text-align: left;
}

/*.services .service-lists .list{
    text-align: left;
}*/

/************************************* TEAM GRID *****************************************/
.team-grid {
    /*height: 100vh;*/
}

.team-grid .row .photo {
    height: 400px;
    background-repeat: no-repeat;
    background-size: cover;
    background-position: 50% 25%;
}

.team-grid .row .photo:hover .filter {
    display: inline-block;
    cursor: pointer;
}

.team-grid .row .photo .filter{
    display: none;
    position: relative;
    height: 100%;
    width: 100%;
    background-color: rgba(255,255,255,.8);
    /*padding-top: 5%;*/
}

.team-grid .row .photo .filter .photo-text {
    width: 80%;
    position: absolute;
    left: 20%;
    top: 20%;
    height: 80%;
    /*background: red;*/
}

.team-grid .row #donald {
    background-image: url("img/team/donald.jpg");
}

.team-grid .row #karen {
    background-image: url("img/team/karen.jpg");
}

.team-grid .row #caitlin {
    background-image: url("img/team/caitlin.jpg");
}

.team-grid .row #will {
    background-image: url("img/team/will.jpg");
}

.team-grid .row #logo {
    background-image: url("img/logo.png");
    background-size: contain;
    background-position: 30% 50%; 
}

.team-grid .row #danny {
    background-image: url("img/team/danny.jpg");
}

/*****************************************************************************************/
/*****************************************************************************************/
/********************************** CONTACT PAGE *****************************************/
/*****************************************************************************************/
/*****************************************************************************************/

/************************************ CONTACT SECTION ***********************************/
.contact-section {
    height: 100vh;
    background-image: url("img/contact-background.jpg");
    background-position: 50% 50%;
    background-size: cover;
    background-repeat: no-repeat;
}

.contact-section .pure-g {
    justify-content: center;
}

.contact-section .form {
    padding: 30vh 0;
    background-color: red;
    background: linear-gradient(180deg, rgba(0,0,0,0) 20%, #FFFFFF 20%);
}

.contact-section .form .contact-title-holder {
    width: 100%;
    text-align: center;
}
/*
.contact-section .image {
    background-image: url("img/contact.png");
    background-position: 50% 50%;
    background-size: contain;
    background-repeat: no-repeat;
}
*/

.contact-section .form input, .contact-section .form textarea {
    width: 80%;
    margin-left: 10%;
}

.contact-section .form label {
    margin-left: 10%;
}

.contact-section .form textarea {
    height: 120px;
}

.contact-section .form #send-button {
    background-color: #000;
    color: #fff;
}

